--- a/omd/WORKSPACE
+++ b/omd/WORKSPACE
@@ -41,8 +41,8 @@ redis(
 load("//packages/openssl:openssl_http.bzl", "openssl")
 
 openssl(
-    sha256 = "d7939ce614029cdff0b6c20f0e2e5703158a489a72b2507b8bd51bf8c8fd10ca",
-    version_str = "1.1.1q",
+    sha256 = "8dee9b24bdb1dcbf0c3d1e9b02fb8f6bf22165e807f45adeb7c9677536859d3b",
+    version_str = "1.1.1t",
 )
 
 load("//packages/xmlsec1:xmlsec1_http.bzl", "xmlsec1")
