--- a/requirements.txt
+++ b/requirements.txt
@@ -961,6 +961,7 @@ defusedxml==0.7.1 \
     --hash=sha256:1bb3032db185915b62d7c6209c5a8792be6a32ab2fedacc84e01b52c51aa3e69 \
     --hash=sha256:a352e7e428770286cc899e2542b6cdaedb2b4953ff269a210103ec58f6198a61
     # via
+    #   -r cmk/requirements.in
     #   exchangelib
     #   jira
     #   pysaml2
