--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -229,7 +229,7 @@ bazel_dep(name = "gazelle", version = "0.42.0")
 bazel_dep(name = "rules_go", version = "0.50.1")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-go_sdk.download(version = "1.23.10")
+go_sdk.download(version = "1.24.5")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
@@ -285,4 +285,10 @@ go_deps.gazelle_override(
 go_deps.gazelle_override(
     build_file_generation = "on",
     path = "github.com/cncf/xds/go",
+)
+go_deps.gazelle_override(
+    directives = [
+        "gazelle:proto disable",
+    ],
+    path = "go.opentelemetry.io/collector/exporter/exporterhelper",
 )
