--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@typescript-eslint/parser": "^8.46.3",
-    "@vue/compiler-dom": "^3.5.24",
+    "@vue/compiler-dom": "^3.5.25",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/server-renderer": "^3.5.24",
+    "@vue/server-renderer": "^3.5.25",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "^10.5.1",
@@ -17,8 +17,18 @@
     "typescript-eslint": "^8.46.3",
     "vitest": "^3.2.4",
     "vitest-fail-on-console": "^0.7.1",
-    "vue": "^3.5.24",
+    "vue": "^3.5.25",
     "vue-tsc": "^2.2.12",
     "vue3-gettext": "4.0.0-alpha.8"
+  },
+  "pnpm": {
+    "overrides": {
+      "glob": "^11.1.0",
+      "js-yaml": "^4.1.0"
+    }
+  },
+  "// pnpm overrides": {
+    "glob": "CMK-28102",
+    "js-yaml": "CMK-28103"
   }
 }
